# mesh_unfolder

./: .gitignore  CMakeLists.txt  README.md  README.txt  compact.ga  unfolding.cluster  unfolding.ga
libs/: RAPID.lib
libs/RAPID/: RAPID.h  RAPID_private.H  RAPID_version.H  moments.H  overlap.H
libs/itree/: CMakeLists.txt  EndPoint.cpp  EndPoint.h  Interval.cpp  Interval.h  MiddleStructure.h  RectKD.cpp  RectKD.h  RectangleTree.h
libs/libga/: Breeder.cpp  Breeder.h  CMakeLists.txt  Individual.cpp  Individual.h  Problem.cpp  Problem.h  Species.cpp  Species.h  rand48.cpp  rand48.h
libs/libga/util/: Random.cpp  Random.h  StreamHelper.cpp  StreamHelper.h
scripts/: clustering.py
src/: BloomingUnfolding.cpp  BloomingUnfolding.h  CD.cpp  CD.h  CMakeLists.txt  ClusterUnfolding.cpp  ClusterUnfolding.h  CompactProblem.cpp  CompactProblem.h  EasilyFoldableUnfolding.cpp  EasilyFoldableUnfolding.h  LPUnfolding.cpp  LPUnfolding.h  LaserUnfolding.cpp  LaserUnfolding.h  MeshCutter.cpp  MeshCutter.h  OverlappingChecker.cpp  OverlappingChecker.h  Splitter.cpp  Splitter.h  UnfoldingEvaluator.cpp  UnfoldingEvaluator.h  UnfoldingProblem.cpp  UnfoldingProblem.h  UnfoldingState.cpp  UnfoldingState.h  config.h  draw.h  intersection.h  main.cpp  main.h  model.cpp  model.h  net.cpp  net.h  netset.cpp  netset.h  netsurgent.cpp  netsurgent.h  (+7 more)
src/CurveMatching/: ArcLengthCurveSignature.cpp  ArcLengthCurveSignature.h  CMakeLists.txt  CurveCSS.cpp  CurveCSS.h  CurveSignature.cpp  CurveSignature.h  curve_db_param.h  img2ply.cpp  img2ply.h  match_two_curves.cpp  opencvstd.h  polygon-bkup-cpp  polygon-bkup-h  shadow.h
src/GL/: CMakeLists.txt  gl2ps.cpp  gl2ps.h  gli.cpp  gli.h  gliDump.cpp  gliDump.h  gliFont.h
src/mathtool/: Basic.cpp  Basic.h  Box.cpp  Box.h  CMakeLists.txt  DualQuaternion.h  Geometry.cpp  Geometry.h  Matrix.h  Point.h  Quaternion.h  Vector.h  tri-tri.h
src/modelgraph/: CMakeLists.txt  ModelEdge.cpp  ModelEdge.h  ModelGraph.cpp  ModelGraph.h  ModelNode.cpp  ModelNode.h
src/polygon/: CMakeLists.txt  bbox2d.cpp  bbox2d.h  bpc.cpp  bpc.h  chull.cpp  chull.h  diagonal2.cpp  diagonal2.h  dp_approx.cpp  dp_approx.h  dude_util.h  intersection.h  net_analyzer.cpp  net_analyzer.h  poly_approx.cpp  poly_approx.h  polygon.cpp  polygon.h  polyline.cpp  polyline.h
src/util/: Base64.h  BitVector.cpp  BitVector.h  CMakeLists.txt  ColorHelper.h  ConvexHull2D.cpp  ConvexHull2D.h  DataHelper.h  DisjointSets.h  MTLReader.cpp  MTLReader.h  Path.cpp  Path.h  SVGWriter.cpp  SVGWriter.h  Statistics.h  TextureRenderer2D.cpp  TextureRenderer2D.h  UnfolderHelper.cpp  UnfolderHelper.h  VRMLWriter.cpp  VRMLWriter.h  macro.h
